# pontryagin

./: LICENSE  README.md  pyproject.toml
examples/: pendulum.py
pontryagin/: __init__.py  main.py  sm.py
